Fixed centering problem
Fixed the issue where some content is not centered.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3057,7 +3057,7 @@ html {
     display: flex;
     position: absolute;
     inset: 0%;
-    max-width: 1500px;
+    /*max-width: 1500px;*/
   }
   
   .home-hero-description {
